tests/rosetta/out/Java/aks-test-for-primes.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// aks-test-for-primes.mochi
import java.util.*;

public class AksTestForPrimes {
    static String poly(int p) {
        String s = "";
        int coef = 1;
        int i = p;
        if (coef != 1) {
            s = s + String.valueOf(coef);
        }
        while (i > 0) {
            s = s + "x";
            if (i != 1) {
                s = s + "^" + String.valueOf(i);
            }
            coef = (int)(Integer.parseInt((coef * i / (p - i + 1))));
            int d = coef;
            if (Objects.equals((p - (i - 1)) % 2, 1)) {
                d = (int)(-d);
            }
            if (d < 0) {
                s = s + " - " + String.valueOf(-d);
            }
            else {
                s = s + " + " + String.valueOf(d);
            }
            i = (int)(i - 1);
        }
        if (Objects.equals(s, "")) {
            s = "1";
        }
        return s;
    }
    static boolean aks(int n) {
        if (n < 2) {
            return false;
        }
        int c = n;
        int i = 1;
        while (i < n) {
            if (!Objects.equals(c % n, 0)) {
                return false;
            }
            c = (int)(Integer.parseInt((c * (n - i) / (i + 1))));
            i = (int)(i + 1);
        }
        return true;
    }
    static void main() {
        int p = 0;
        while (p <= 7) {
            System.out.println(String.valueOf(p) + ":  " + poly(p));
            p = (int)(p + 1);
        }
        boolean first = true;
        p = (int)(2);
        String line = "";
        while (p < 50) {
            if (aks(p)) {
                if (first) {
                    line = line + String.valueOf(p);
                    first = false;
                }
                else {
                    line = line + " " + String.valueOf(p);
                }
            }
            p = (int)(p + 1);
        }
        System.out.println(line);
    }
    public static void main(String[] args) {
        main();
    }
}
